--- a/styles/scss/_global.scss
+++ b/styles/scss/_global.scss
@@ -2,6 +2,7 @@
 
 html {
   font-family: "roboto", sans-serif;
+  font-size: 10px;
 }
 
 h1,
@@ -17,10 +18,6 @@ h6 {
   display: none;
 }
 
-button {
-  outline: none !important;
-}
-
 input[type="submit"] {
   border: none;
 }
@@ -29,4 +26,16 @@ input[type="submit"] {
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
+}
+
+button {
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  outline: none !important;
+  border-style: none;
+}
+
+body {
+  background-color: #000;
 }
