--- a/styles/scss/menu/_app.scss
+++ b/styles/scss/menu/_app.scss
@@ -1,5 +1,4 @@
 .app {
-  font-size: 14px;
   cursor: pointer;
 
   .content {
@@ -37,14 +36,14 @@
     height: 100%;
 
     p {
-      font-size: 20px;
-      line-height: 20px;
+      font-size: 2rem;
+      line-height: 2rem;
       margin-bottom: 10px;
     }
 
     small {
-      font-size: 16px;
-      line-height: 16px;
+      font-size: 1.6rem;
+      line-height: 1.6rem;
     }
   }
 
