--- a/styles/scss/menu/_navigation.scss
+++ b/styles/scss/menu/_navigation.scss
@@ -110,9 +110,14 @@
   }
 
   .menu-expand {
+    margin: 0 10px;
     font-size: 20px;
     svg {
       color: white;
     }
+  }
+
+  .total {
+    font-size: 1.5rem;
   }
 }
