--- a/styles/scss/menu/_menu.scss
+++ b/styles/scss/menu/_menu.scss
@@ -4,6 +4,7 @@
   @import "menu-navigation";
   @import "menu-card";
   @import "alergens";
+  @import "hidden-window";
   @import "order";
   @import "customize-pizza";
   @import "media";
