--- a/styles/scss/menu/_variables.scss
+++ b/styles/scss/menu/_variables.scss
@@ -93,8 +93,8 @@ $alergens-font-color: white;
 $alergens-font-size: 1.8rem;
 
 //login
-$login-background-color: black;
-$login-font-color: white;
+$login-background-color: white;
+$login-font-color: black;
 $login-cancel-background-color: $red;
 $login-cancel-color: white;
 $login-save-background-color: $green2;
