--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -976,21 +976,48 @@ body {
   font-weight: normal;
 }
 
-.menu .order {
-  height: 100vh;
+.menu .hidden-window {
   width: 100vw;
-  top: -100%;
+  height: 100vh;
   position: fixed;
+  top: -100%;
   left: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   z-index: 2;
+  background-color: black;
+}
+
+.menu .hidden-window.active {
+  top: 0;
+}
+
+.menu .hidden-window .wrapper {
+  position: relative;
+  max-width: 1280px;
+  padding: 100px 0;
+  margin: 0 auto;
+  width: 100%;
+  max-height: 100vh;
+  height: 100%;
   overflow: auto;
+}
+
+.menu .hidden-window .close {
+  position: absolute;
+  top: 50px;
+  right: 50px;
+  padding: 0px;
+  cursor: pointer;
+}
+
+.menu .hidden-window .close svg {
+  color: black;
+}
+
+.menu .hidden-window .container {
+  max-width: 600px;
+}
+
+.menu .order {
   -webkit-transition: top 0.3s;
   transition: top 0.3s;
   color: black;
@@ -998,37 +1025,7 @@ body {
 }
 
 .menu .order .wrapper {
-  position: relative;
-  margin: 0 auto;
-  overflow: auto;
-  padding: 50px 0;
-  width: 100%;
-  max-width: 1280px;
   background-color: white;
-  background-attachment: fixed;
-  background-size: cover;
-  min-height: 100vh;
-}
-
-.menu .order .container {
-  margin-top: 50px;
-  max-width: 600px;
-}
-
-.menu .order.active {
-  top: 0;
-}
-
-.menu .order .close {
-  position: absolute;
-  top: 3rem;
-  right: 3rem;
-  padding: 0px;
-  cursor: pointer;
-}
-
-.menu .order .close svg {
-  color: black;
 }
 
 .menu .order h3 {
@@ -1369,6 +1366,10 @@ body {
           align-items: center;
 }
 
+.menu .customize-pizza button.close {
+  font-size: 23px;
+}
+
 @media (min-width: 400px) {
   .menu .menu-card .menu-item .wrapper {
     -ms-flex-wrap: nowrap;
@@ -1447,12 +1448,6 @@ body {
 }
 
 .menu .login {
-  z-index: 2;
-  position: fixed;
-  height: 100vh;
-  width: 100vw;
-  left: 0;
-  top: -100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1460,48 +1455,20 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  color: white;
+  color: black;
   -webkit-transition: top 0.3s;
   transition: top 0.3s;
   overflow: auto;
   font-size: 1.5rem;
 }
 
-.menu .login.active {
-  top: 0;
-}
-
-.menu .login .content {
-  position: relative;
-}
-
 .menu .login .wrapper {
-  position: relative;
-  overflow: auto;
-  padding: 50px 0;
-  background-color: black;
-  background-attachment: fixed;
-  background-size: cover;
-  min-height: 100vh;
-  width: 100%;
-  margin: 0 auto;
+  background-color: white;
 }
 
 .menu .login form {
   margin: 0 auto;
   max-width: 300px;
-}
-
-.menu .login .close {
-  position: absolute;
-  padding: 0px;
-  top: 3rem;
-  right: 3rem;
-  cursor: pointer;
-}
-
-.menu .login .close svg {
-  color: white;
 }
 
 .menu .login .buttons {
@@ -1521,12 +1488,14 @@ body {
   padding: 10px 20px;
   background-color: #b30908;
   color: white;
+  border-radius: 10px;
 }
 
 .menu .login .buttons .save {
   background-color: #8bcc9a;
   color: white;
   padding: 10px 20px;
+  border-radius: 10px;
 }
 
 .menu .login .buttons .remind {
