--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -398,7 +398,7 @@ body {
 .menu {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background-image: url("../../images/background.jpg");
+  background-image: url("../../images/background-compressed.jpg");
   background-attachment: fixed;
   background-size: cover;
   min-height: 100vh;
@@ -418,6 +418,15 @@ body {
   max-width: 1280px;
   width: 100%;
   padding: 20px;
+  text-align: center;
+}
+
+.menu .navigation.smaller .logo {
+  width: 8rem;
+}
+
+.menu .navigation.smaller .title h1 {
+  font-size: 25px;
 }
 
 .menu .navigation .wrapper {
@@ -448,6 +457,8 @@ body {
   font-size: 3.5rem;
   margin: 0;
   padding: 0;
+  -webkit-transition: font-size 0.3s;
+  transition: font-size 0.3s;
 }
 
 .menu .navigation .title .dec-1,
@@ -470,7 +481,9 @@ body {
 
 .menu .navigation .logo {
   margin-right: auto;
-  max-width: 14rem;
+  width: 14rem;
+  -webkit-transition: width 0.3s;
+  transition: width 0.3s;
 }
 
 .menu .navigation .logo img {
@@ -597,6 +610,7 @@ body {
 }
 
 .menu .menu-navigation .icon {
+  display: none;
   max-width: 30px;
   margin-right: 10px;
 }
@@ -663,7 +677,6 @@ body {
 }
 
 .menu .menu-card .menu-item.active .basket {
-  background-color: #8bcc9a;
   color: white;
 }
 
@@ -673,6 +686,7 @@ body {
 
 .menu .menu-card .menu-item.active .basket button.remove {
   display: block;
+  background-color: #8bcc9a;
 }
 
 .menu .menu-card .menu-item.active .count button svg {
@@ -698,6 +712,8 @@ body {
 
 .menu .menu-card .menu-item .image {
   min-width: 37.59%;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -726,6 +742,12 @@ body {
   width: 100%;
 }
 
+.menu .menu-card .menu-item .info,
+.menu .menu-card .menu-item .buy {
+  width: 100%;
+  padding: 5px;
+}
+
 .menu .menu-card .menu-item .name,
 .menu .menu-card .menu-item .details {
   line-height: 20px;
@@ -749,12 +771,6 @@ body {
   font-weight: 300;
 }
 
-.menu .menu-card .menu-item .info,
-.menu .menu-card .menu-item .buy {
-  width: 100%;
-  padding: 5px;
-}
-
 .menu .menu-card .menu-item .buy {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -762,10 +778,18 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .menu .menu-card .menu-item .buy button img {
   max-width: 100%;
+}
+
+.menu .menu-card .menu-item .buy {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .menu .menu-card .menu-item .price {
@@ -776,19 +800,6 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-.menu .menu-card .menu-item .price button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  max-width: 2.5rem;
 }
 
 .menu .menu-card .menu-item .price span {
@@ -804,27 +815,38 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  text-align: center;
   color: white;
   font-size: 1.5rem;
 }
 
-.menu .menu-card .menu-item .basket {
-  padding: 5px 10px;
-  background-color: #b30908;
-  border-radius: 0 5px 5px 0px;
-  font-size: 25px;
+.menu .menu-card .menu-item .price button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-item-align: center;
+      align-self: center;
+  padding: 5px;
+  width: 4rem;
+  height: 100%;
+  border-radius: 0 5px 5px 0;
 }
 
-.menu .menu-card .menu-item .basket button.add {
-  display: block;
-  color: white;
+.menu .menu-card .menu-item .price .remove {
+  display: none;
+}
+
+.menu .menu-card .menu-item .price .add {
+  background-color: #b30908;
+  height: 100%;
   font-size: 2.5rem;
 }
 
-.menu .menu-card .menu-item .basket button.remove {
-  display: none;
+.menu .menu-card .menu-item .price .add svg {
   color: white;
-  padding: 0;
 }
 
 .menu .menu-card .menu-item .count {
