--- a/styles/scss/menu/_menu-item.scss
+++ b/styles/scss/menu/_menu-item.scss
@@ -23,7 +23,6 @@
     }
 
     .basket {
-      background-color: $menu-item-active-basket-background-color;
       color: $menu-item-active-basket-color;
 
       button.add {
@@ -32,6 +31,7 @@
 
       button.remove {
         display: block;
+        background-color: $menu-item-active-basket-background-color;
       }
     }
 
@@ -62,6 +62,8 @@
   .image {
     min-width: 37.59%;
 
+    align-self: flex-start;
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -80,6 +82,12 @@
     align-content: space-between;
     // max-width: 62.41%;
     width: 100%;
+  }
+
+  .info,
+  .buy {
+    width: 100%;
+    padding: 5px;
   }
 
   .name,
@@ -104,15 +112,10 @@
     font-weight: 300;
   }
 
-  .info,
-  .buy {
-    width: 100%;
-    padding: 5px;
-  }
-
   .buy {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 
     button {
       img {
@@ -120,18 +123,13 @@
       }
     }
   }
-
+  .buy {
+    justify-content: space-between;
+  }
   .price {
     margin-top: 5px;
     order: 2;
     display: flex;
-
-    button {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      max-width: 2.5rem;
-    }
   }
 
   .price span {
@@ -143,27 +141,37 @@
     justify-content: center;
     align-items: center;
 
+    text-align: center;
+
     color: $menu-item-price-color;
     font-size: 1.5rem;
   }
 
-  .basket {
-    padding: 5px 10px;
-    background-color: $menu-item-basket-background-color;
-    border-radius: 0 5px 5px 0px;
+  .price {
+    button {
+      display: flex;
+      justify-content: center;
+      align-self: center;
 
-    font-size: 25px;
+      padding: 5px;
+      width: 4rem;
+      height: 100%;
 
-    button.add {
-      display: block;
-      color: $menu-item-active-basket-color;
-      font-size: 2.5rem;
+      border-radius: 0 5px 5px 0;
     }
 
-    button.remove {
+    .remove {
       display: none;
-      color: $menu-item-active-basket-color;
-      padding: 0;
+    }
+
+    .add {
+      background-color: $red;
+      height: 100%;
+
+      font-size: 2.5rem;
+      svg {
+        color: white;
+      }
     }
   }
 
@@ -195,7 +203,6 @@
 
     .add,
     .remove {
-      // border: 1px solid $menu-item-name-font-color;
       color: $menu-item-name-font-color;
       border-radius: 50%;
       height: 3rem;
