--- a/styles/scss/menu/_menu.scss
+++ b/styles/scss/menu/_menu.scss
@@ -14,7 +14,7 @@
 
   box-sizing: border-box;
 
-  background-image: url("../../images/background.jpg");
+  background-image: url("../../images/background-compressed.jpg");
   background-attachment: fixed;
   background-size: cover;
   min-height: 100vh;
@@ -23,5 +23,4 @@
   max-width: 1280px;
   margin-left: auto;
   margin-right: auto;
-  // background-color: black;
 }
